# Refinex-Notes

./: AGENTS.md  Refinex-Notes Complete-Plans.md  Refinex-Notes 自研编辑器可行性深度调研报告.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
docs/: ARCHITECTURE.md  OBSERVABILITY.md  PLANS.md
docs/design-docs/: README.md  Refinex-Notes 完整技术架构文档.md  refinex-notes-prototype.html
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 2026-04-13-app-shell-file-tree-tabs.md  2026-04-13-audit-phase0-scaffold.md  2026-04-13-codemirror-code-block-view.md  2026-04-13-create-zustand-store-scaffolds.md  2026-04-13-define-prosemirror-schema.md  2026-04-13-editor-rich-ui-surfaces.md  2026-04-13-inline-sync-plugin.md  2026-04-13-input-rules-keymap.md  2026-04-13-integrate-phase0-ui-infrastructure.md  (+51 more)
skills/: continue-writing.md  expand.md  extract-key-points.md  fix-grammar.md  generate-outline.md  rewrite.md  summarize.md  translate.md
src/: AGENTS.md  App.tsx  main.tsx  styles.css
src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  github_session.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/ai/: mod.rs  providers.rs  streaming.rs
src-tauri/src/commands/: ai.rs  auth.rs  files.rs  git.rs  mod.rs  search.rs  settings.rs
src-tauri/src/git/: auth.rs  mod.rs  sync.rs
src-tauri/src/markdown/: export.rs  mod.rs
src-tauri/src/search/: fuzzy.rs  indexer.rs  mod.rs
src/__tests__/: App.test.ts
src/components/: CommandPalette.tsx  app-shell-utils.ts
src/editor/: RefinexEditor.tsx  editor.css  index.ts  parser.ts  rich-ui.ts  schema.ts  serializer.ts
src/hooks/: useKeyboardShortcuts.ts
src/services/: aiAttachmentService.ts  aiService.ts  authService.ts  fileService.ts  gitService.ts  searchService.ts  settingsService.ts  skillService.ts
src/stores/: aiStore.ts  authStore.ts  editorStore.ts  gitStore.ts  noteStore.ts  settingsStore.ts
src/types/: ai.ts  app-shell.ts  auth.ts  editor.ts  git.ts  index.ts  markdown-it-task-lists.d.ts  notes.ts  search.ts  settings.ts  skill.ts
src/utils/: documentPerf.ts
(+197 files in other folders)
