[package]
name = "refinex-notes"
version = "0.1.0"
description = "AI-native Markdown notes powered by Tauri"
authors = ["Refinex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "refinex_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
comrak = "0.36"
git2 = "0.19"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
nucleo-matcher = "0.3"
notify = "7"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
